<resources>
    <string name="app_name">Calculator</string>
    <string name="leftbracket">(</string>
    <string name="rightbracket">)</string>
    <string name="equal">=</string>
    <string name="add">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="AC_button">AC</string>
    <string name="power">^</string>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="dot">.</string>
    <string name="sine">Sin</string>
    <string name="cosine">Cos</string>
    <string name="tangent">Tan</string>
    <string name="natural_lograthmic">lgn</string>
    <string name="lograthmic">log</string>
    <string name="pie">"\u03C0"</string>
    <string name="average">"\u221A"</string>
    <string name="factorial">!</string>
    <string name="reciprocal">1/x</string>
    <string name="back">"\u2190"</string>
</resources>
